kubernetes/api-gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: api-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
      labels:
        app: api-gateway
    spec:
      volumes:
      - name: credentials
        secret:
          secretName: petclinic-credentials
      containers:
      - name: api-gateway
        image: saturnism/gcp-spring-petclinic-api-gateway:latest
        readinessProbe:
          exec:
            command:
            - curl
            - http://localhost:8080/actuator/info
        livenessProbe:
          exec:
            command:
            - curl
            - http://localhost:8080/actuator/health
          initialDelaySeconds: 15
        resources:
          requests:
            memory: 256m
            cpu: 200m
        volumeMounts:
        - name: credentials
          mountPath: "/etc/credentials"
          readOnly: true
        ports:
        - name: http
          containerPort: 8080
