kubernetes/visits-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: visits-service
  name: visits-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: visits-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: visits-service
  name: visits-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
      labels:
        app: visits-service
    spec:
      volumes:
      - name: credentials
        secret:
          secretName: petclinic-credentials
      containers:
      - name: visits-service
        image: saturnism/gcp-spring-petclinic-visits-service:latest
        readinessProbe:
          exec:
            command:
            - curl
            - http://localhost:8080/actuator/info
        livenessProbe:
          exec:
            command:
            - curl
            - http://localhost:8080/actuator/health
          initialDelaySeconds: 20
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 512Mi
            cpu: 2000m
        volumeMounts:
        - name: credentials 
          mountPath: "/etc/credentials"
          readOnly: true
        ports:
        - name: http
          containerPort: 8080
